# pyclean

./: .packit.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrpm-clean.spec
.github/workflows/: tests.yml
pyclean/: cli.py  constants.py  helpers.py
pyclean/cleaner/: cleaner.py
pyclean/cleaner/package_managers/: base.py  pip.py  pipx.py  rpm.py
pyrpm_clean/: cleaner.py  cli.py  constants.py  helpers.py  test.py
pyrpm_clean/cleaner/: cleaner.py
pyrpm_clean/cleaner/package_managers/: base.py  pip.py  pipx.py  rpm.py
tests/: Containerfile  conftest.py
tests/functional/: test_use_cases_on_machine.py
tests/unit/: test_cleaner.py
