[tool.poetry]
name = "pyclean"
version = "1.0.0"
description = "Clean python packages installed both as rpm and python package"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
maintainers = ["Jiří Kyjovský <j1.kyjovsky@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/nikromen/pyclean"
repository = "https://github.com/nikromen/pyclean"
exclude = ["tests/"]
packages = [{ include = "pyclean" }]


[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.0"
tqdm = ">=4.60.0"
setuptools = ">=57.0.0"


[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
mypy = ">=0.900"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pyclean = "pyclean.cli:entry_point"
